#30038: configurable browser level screenshots

--- a/assets/config.json
+++ b/assets/config.json
@@ -1,6 +1,7 @@
 {
     "bit_64": "Yes",
     "browser_check": "Yes",
+    "browser_screenshots": "Yes",
     "chrome_extnpath": "default",
     "chrome_path": "default",
     "chrome_profile": "default",
