Task #32779: Add " Max Retries for App Launch " to config in ICE and use the same value in normalizePDF KW

--- a/assets/config.json
+++ b/assets/config.json
@@ -27,6 +27,7 @@
     "incognito_private_mode": "No",
     "kill_stale": "Yes",
     "logFile_Path": "./logs/TestautoV2.log",
+    "max_retries_app_launch": "20",
     "prediction_for_iris_objects": "No",
     "queryTimeOut": "3",
     "screenShot_Flag": "All",
