--- a/assets/config.json
+++ b/assets/config.json
@@ -26,18 +26,18 @@
     "ignore_certificate": "Yes",
     "incognito_private_mode": "No",
     "kill_stale": "Yes",
-    "logFile_Path": "./logs/TestautoV2.log",
+    "logFile_Path": "D:\\ICE\\logs\\TestautoV2.log",
     "max_retries_app_launch": "20",
     "prediction_for_iris_objects": "No",
     "queryTimeOut": "3",
     "screenShot_Flag": "All",
     "screen_rec": "No",
-    "server_cert": "./assets/CA_BUNDLE/server.crt",
+    "server_cert": "D:\\ICE\\assets\\CA_BUNDLE\\server.crt",
     "server_ip": "localhost",
     "server_port": "8443",
     "stepExecutionWait": "1",
     "timeOut": "1",
-    "tls_security": "High",
+    "tls_security": "Low",
     "update_check": "No",
     "use_custom_debugport": "No"
 }
