--- a/assets/config.json
+++ b/assets/config.json
@@ -15,29 +15,29 @@
     "enableSecurityCheck": "No",
     "exception_flag": "false",
     "extn_enabled": "No",
-    "firefox_path": "default",
+    "firefox_path": "C:\\Users\\jauharirohan.manish\\AppData\\Local\\Mozilla Firefox\\firefox.exe",
     "full_screenshot": "Yes",
-    "globalWaitTimeOut": "0",
+    "globalWaitTimeOut": "10",
     "headless_mode": "No",
     "hide_soft_key": "Yes",
-    "highlight_check": "No",
+    "highlight_check": "Yes",
     "httpStatusCode": "Yes",
     "ignoreVisibilityCheck": "No",
     "ignore_certificate": "Yes",
     "incognito_private_mode": "No",
     "kill_stale": "Yes",
-    "logFile_Path": "./logs/TestautoV2.log",
+    "logFile_Path": "D:\\ICE\\logs\\TestautoV2.log",
     "max_retries_app_launch": "20",
     "prediction_for_iris_objects": "No",
     "queryTimeOut": "3",
     "screenShot_Flag": "All",
     "screen_rec": "No",
-    "server_cert": "./assets/CA_BUNDLE/server.crt",
+    "server_cert": "D:\\ICE\\assets\\CA_BUNDLE\\server.crt",
     "server_ip": "localhost",
     "server_port": "8443",
     "stepExecutionWait": "1",
     "timeOut": "1",
-    "tls_security": "High",
+    "tls_security": "Low",
     "update_check": "No",
     "use_custom_debugport": "No",
     "file_server_ip":"https://driver.avoautomation.com/driver"
