loadingwindow module is added and autoregistration ,clould enablement changes made

--- a/assets/config.json
+++ b/assets/config.json
@@ -15,6 +15,7 @@
     "enableSecurityCheck": "No",
     "exception_flag": "false",
     "extn_enabled": "No",
+    "file_server_ip": "https://driver.avoautomation.com/driver",
     "firefox_path": "default",
     "full_screenshot": "Yes",
     "globalWaitTimeOut": "0",
@@ -22,23 +23,27 @@
     "hide_soft_key": "Yes",
     "highlight_check": "No",
     "httpStatusCode": "Yes",
+    "ice_Token": "",
     "ignoreVisibilityCheck": "No",
     "ignore_certificate": "Yes",
     "incognito_private_mode": "No",
+    "isTrial": 0,
     "kill_stale": "Yes",
-    "logFile_Path": "./logs/TestautoV2.log",
+    "logFile_Path": ".\\logs\\TestautoV2.log",
     "max_retries_app_launch": "20",
     "prediction_for_iris_objects": "No",
     "queryTimeOut": "3",
+    "sample_application_urls": [
+        "https://avotestlab.avoassure.ai/avo/"
+    ],
     "screenShot_Flag": "All",
     "screen_rec": "No",
-    "server_cert": "./assets/CA_BUNDLE/server.crt",
+    "server_cert": ".\\assets\\CA_BUNDLE\\server.crt",
     "server_ip": "localhost",
-    "server_port": "8443",
+    "server_port": "443",
     "stepExecutionWait": "1",
     "timeOut": "1",
-    "tls_security": "High",
+    "tls_security": "Low",
     "update_check": "No",
-    "use_custom_debugport": "No",
-    "file_server_ip":"https://driver.avoautomation.com/driver"
+    "use_custom_debugport": "No"
 }
