#34132: Handled issue in drag and drop of panel elements in OEBS.

--- a/assets/config.json
+++ b/assets/config.json
@@ -24,12 +24,12 @@
     "highlight_check": "No",
     "httpStatusCode": "Yes",
     "ice_Token": "",
-    "ignoreVisibilityCheck": "Yes",
+    "ignoreVisibilityCheck": "No",
     "ignore_certificate": "Yes",
     "incognito_private_mode": "No",
     "isTrial": 0,
     "kill_stale": "Yes",
-    "logFile_Path": "logs\\TestautoV2.log",
+    "logFile_Path": "./logs/TestautoV2.log",
     "max_retries_app_launch": "20",
     "prediction_for_iris_objects": "No",
     "queryTimeOut": "3",
@@ -38,8 +38,8 @@
     ],
     "screenShot_Flag": "All",
     "screen_rec": "No",
-    "server_cert": "assets\\CA_BUNDLE\\server.crt",
-    "server_ip": "srv01nineteen68",
+    "server_cert": "./assets/CA_BUNDLE/server.crt",
+    "server_ip": "localhost",
     "server_port": "443",
     "stepExecutionWait": "1",
     "timeOut": "1",
