--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.defaultInterpreterPath": "${workspaceRoot}/python.exe",
+    "python.pythonPath": "${workspaceRoot}/python.exe",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true
 }
