--- a/assets/config.json
+++ b/assets/config.json
@@ -46,5 +46,6 @@
     "tls_security": "Low",
     "update_check": "No",
     "use_custom_debugport": "No",
-    "element_load_timeout": "10"
+    "element_load_timeout": "30",
+    "verify_wait_time": "60"
 }
