--- a/assets/config.json
+++ b/assets/config.json
@@ -1,4 +1,5 @@
 {
+    "ai_server": "https://avoaiapitest.avoautomation.com",
     "bit_64": "Yes",
     "browser_check": "Yes",
     "browser_screenshots": "Yes",
@@ -12,6 +13,7 @@
     "delay_stringinput": "1",
     "disable_screen_timeout": "No",
     "displayVariableTimeOut": "1",
+    "element_load_timeout": "30",
     "enableSecurityCheck": "No",
     "exception_flag": "false",
     "extn_enabled": "No",
@@ -39,13 +41,12 @@
     "screenShot_Flag": "All",
     "screen_rec": "No",
     "server_cert": "./assets/CA_BUNDLE/server.crt",
-    "server_ip": "localhost",
+    "server_ip": "demo.avoautomation.com",
     "server_port": "443",
     "stepExecutionWait": "1",
     "timeOut": "1",
     "tls_security": "Low",
     "update_check": "No",
     "use_custom_debugport": "No",
-    "element_load_timeout": "30",
     "verify_wait_time": "60"
 }
