#34830: Improved iris removed some config changes

--- a/assets/config.json
+++ b/assets/config.json
@@ -41,7 +41,7 @@
     "screenShot_Flag": "All",
     "screen_rec": "No",
     "server_cert": "./assets/CA_BUNDLE/server.crt",
-    "server_ip": "demo.avoautomation.com",
+    "server_ip": "localhost",
     "server_port": "443",
     "stepExecutionWait": "1",
     "timeOut": "1",
