iris changes pushed

--- a/assets/config.json
+++ b/assets/config.json
@@ -29,7 +29,7 @@
     "incognito_private_mode": "No",
     "isTrial": 0,
     "kill_stale": "Yes",
-    "logFile_Path": "./logs/Avoclient.log",
+    "logFile_Path": "D:\\sprint_27\\ICE\\logs\\Avoclient.log",
     "max_retries_app_launch": "20",
     "prediction_for_iris_objects": "No",
     "queryTimeOut": "3",
@@ -38,9 +38,9 @@
     ],
     "screenShot_Flag": "All",
     "screen_rec": "No",
-    "server_cert": "./assets/CA_BUNDLE/server.crt",
+    "server_cert": "D:\\sprint_27\\ICE\\assets\\CA_BUNDLE\\server.crt",
     "server_ip": "localhost",
-    "server_port": "443",
+    "server_port": "8443",
     "stepExecutionWait": "1",
     "timeOut": "1",
     "tls_security": "Low",
