--- a/assets/config.json
+++ b/assets/config.json
@@ -1,4 +1,5 @@
 {
+    "ai_server": "https://avoaiapi.avoautomation.com",
     "bit_64": "Yes",
     "browser_check": "Yes",
     "browser_screenshots": "Yes",
@@ -12,6 +13,7 @@
     "delay_stringinput": "1",
     "disable_screen_timeout": "No",
     "displayVariableTimeOut": "1",
+    "element_load_timeout": "30",
     "enableSecurityCheck": "No",
     "exception_flag": "false",
     "extn_enabled": "No",
@@ -29,7 +31,7 @@
     "incognito_private_mode": "No",
     "isTrial": 0,
     "kill_stale": "Yes",
-    "logFile_Path": "D:\\sprint_27\\ICE\\logs\\Avoclient.log",
+    "logFile_Path": "./logs/Avoclient.log",
     "max_retries_app_launch": "20",
     "prediction_for_iris_objects": "No",
     "queryTimeOut": "3",
@@ -38,14 +40,13 @@
     ],
     "screenShot_Flag": "All",
     "screen_rec": "No",
-    "server_cert": "D:\\sprint_27\\ICE\\assets\\CA_BUNDLE\\server.crt",
+    "server_cert": "./assets/CA_BUNDLE/server.crt",
     "server_ip": "localhost",
-    "server_port": "8443",
+    "server_port": "443",
     "stepExecutionWait": "1",
     "timeOut": "1",
     "tls_security": "Low",
     "update_check": "No",
     "use_custom_debugport": "No",
-    "element_load_timeout": "30",
     "verify_wait_time": "60"
 }
