--- a/assets/config.json
+++ b/assets/config.json
@@ -48,5 +48,6 @@
     "tls_security": "Low",
     "update_check": "No",
     "use_custom_debugport": "No",
-    "verify_wait_time": "60"
+    "verify_wait_time": "60",
+    "sap_object_indentification_order": "1"
 }
