--- a/assets/config.json
+++ b/assets/config.json
@@ -17,7 +17,7 @@
     "enableSecurityCheck": "No",
     "exception_flag": "false",
     "extn_enabled": "No",
-    "file_server_ip": "https://driver.avoautomation.com/driver",
+    "file_server_ip": "https://downloads.avoassure.ai/driver",
     "firefox_path": "default",
     "full_screenshot": "Yes",
     "globalWaitTimeOut": "0",
