licensetype=4 by default

--- a/assets/config.json
+++ b/assets/config.json
@@ -31,6 +31,7 @@
     "incognito_private_mode": "No",
     "isTrial": 0,
     "kill_stale": "Yes",
+    "licensetype": 4,
     "logFile_Path": "./logs/Avoclient.log",
     "max_retries_app_launch": "20",
     "prediction_for_iris_objects": "No",
@@ -43,7 +44,6 @@
     "server_cert": "./assets/CA_BUNDLE/server.crt",
     "server_ip": "localhost",
     "server_port": "443",
-    "servicelevel": 0,
     "stepExecutionWait": "0.1",
     "timeOut": "1",
     "tls_security": "Low",
