--- a/Test-WinICEPipeline.yml
+++ b/Test-WinICEPipeline.yml
@@ -1,5 +1,9 @@
 name: Test-WinICEPipeline 
 trigger: none
+
+pool:
+  name: Default
+
 resources:
   pipelines:
   - pipeline: Test-WinICEPipeline  
