Update Test-MacICEPipeline.yml for Azure Pipelines

--- a/Test-MacICEPipeline.yml
+++ b/Test-MacICEPipeline.yml
@@ -2,7 +2,7 @@ name: Test-MacICEPipeline
 
 trigger: none
 pool:
-  name: armocipool
+  name: MAC
 resources:
   pipelines:
   - pipeline: Test-MacICEPipeline
