--- a/Test-WinICEPipeline.yml
+++ b/Test-WinICEPipeline.yml
@@ -7,7 +7,7 @@ pool:
 resources:
   pipelines:
   - pipeline: Test-WinICEPipeline  
-    source: Test-LinuxDASPipeline
+    source: Test-Parent-Pipeline
     trigger: true
 steps:
 - task: DownloadBuildArtifacts@1
@@ -23,14 +23,14 @@ steps:
 - checkout: git://$(System.TeamProject)/ICE  #####
   persistCredentials: true
   clean: true
-  path: s/itdm
+  path: s/avoassure
 - task: CmdLine@2
   inputs:
     script: |
       BranchName=$(cat $(System.ArtifactsDirectory)/BranchName/BranchName.txt)
       echo "Branch Name is:$BranchName"
       echo $(Build.SourceBranch)
-      cd s/itdm
+      cd s/avoassure
       git checkout $BranchName
       ls
 
