Update Test-MacICEPipeline.yml for Azure Pipelines

--- a/Test-MacICEPipeline.yml
+++ b/Test-MacICEPipeline.yml
@@ -3,6 +3,8 @@ name: Test-MacICEPipeline
 trigger: none
 pool:
   name: MAC
+  demands:
+   - Agent.Name -equals Catalina
 resources:
   pipelines:
   - pipeline: Test-MacICEPipeline
