--- a/Test-MacICEPipeline.yml
+++ b/Test-MacICEPipeline.yml
@@ -1,16 +1,23 @@
 name: Test-MacICEPipeline
-
 trigger: none
+
 pool:
   name: MAC
   demands:
    - Agent.Name -equals Catalina
+
 resources:
   pipelines:
   - pipeline: Test-MacICEPipeline
     source: Test-Parent-Pipeline
     trigger: true
 steps:
+
+- script: |
+    # Clean up working directory
+    sudo rm -rf s/avoassure ArtifactsFolder.txt BranchName.txt version.txt
+  displayName: 'Clean Working Directory'
+
 - task: DownloadBuildArtifacts@1
   inputs:
     buildType: 'specific'
@@ -18,17 +25,24 @@ steps:
     pipeline: '182'
     buildVersionToDownload: 'latest'
     downloadType: 'single'
-    artifactName: 'BranchName'
+    artifactName: 'dependencies'
     downloadPath: '$(System.ArtifactsDirectory)'
+
+- script: |
+    unzip -j $(Build.ArtifactStagingDirectory)/dependencies/dependencies.zip -d $(Build.ArtifactStagingDirectory)
+    rm -rf dependencies
+    ls $(System.ArtifactsDirectory)
+  displayName: 'unzipping dependencies folder'
 
 - checkout: git://$(System.TeamProject)/ICE  
   persistCredentials: true
   clean: true
   path: s/avoassure
+
 - task: CmdLine@2
   inputs:
     script: |
-      BranchName=$(cat $(System.ArtifactsDirectory)/BranchName/BranchName.txt)
+      BranchName=$(cat $(System.ArtifactsDirectory)/BranchName.txt)
       echo "Branch Name is:$BranchName"
       echo $(Build.SourceBranch)
       cd s/avoassure
