--- a/Test-MacICEPipeline.yml
+++ b/Test-MacICEPipeline.yml
@@ -4,7 +4,7 @@ trigger: none
 pool:
   name: MAC
   demands:
-   - Agent.Name -equals Catalina
+   - Agent.Name -equals Monterey
 
 resources:
   pipelines:
