--- a/WinICEPipeline.yml
+++ b/WinICEPipeline.yml
@@ -1,4 +1,4 @@
-name: Test-WinICEPipeline 
+name: WinICEPipeline 
 trigger: none
 
 pool:
@@ -7,8 +7,8 @@ pool:
 
 resources:
   pipelines:
-  - pipeline: Test-WinICEPipeline  
-    source: Test-Parent-Pipeline
+  - pipeline: WinICEPipeline  
+    source: Build-AvoAssure
     trigger: true
 
 
