--- a/assets/config.json
+++ b/assets/config.json
@@ -50,7 +50,7 @@
     "tls_security": "Low",
     "update_check": "No",
     "use_custom_debugport": "No",
-    "verify_wait_time": "60",
+    "max_retries_socket_connection": 10,
     "sap_object_indentification_order": "1",
     "oebs_object_indentification_order": "1"
 }
